# Web-and-Desktop-Apps

./: .claude  .cursorrules  .dockerignore  .env.example  .env.production.template  .env.railway.template  .gitignore  .pre-commit-config.yaml  1_sroie.json  AGENTS.md  API_ENDPOINT_FIX_SUMMARY.md  BATCH_PROCESSOR_SUMMARY.txt  CELERY_BEAT_FIX_SUMMARY.md  CHANGELOG.md  CIRCULAR_EXCHANGE_GUIDE.md  CI_IMPORT_FIX_SUMMARY.md  COMPLETE_SOLUTIONS.md  COMPREHENSIVE_CHECK_FINAL_REPORT.md  CRITICAL_FIXES.md  CUDA_GPU_SETUP.md  DEBUGGING_SROIE.md  DEPLOYMENT_FIX_SUMMARY.md  DEPLOYMENT_FLOW.txt  DEPLOYMENT_NEXT_STEPS.md  DEPLOYMENT_READINESS_REPORT.md  DEPLOYMENT_READY.md  DEPLOYMENT_SUMMARY.txt  DEPLOY_CHECKLIST.md  DOCKER_FIX_VISUAL_COMPARISON.md  DOCKER_PORT_FIX_COMPARISON.md  DOCKER_PORT_FIX_SUMMARY.md  DOCKER_STARTUP_FIX_SUMMARY.md  DOCS.md  DOCUMENTATION_OPTIMIZATION_SUMMARY.md  Dockerfile  FILE_ORGANIZATION_SUMMARY.md  FINAL_FIX.md  FINAL_VALIDATION.md  FIX_SUMMARY.md  FIX_SUMMARY.txt  (+165 more)
.github/: copilot-instructions.md
deploy/: README.md  install.sh  recover.sh  redeploy.sh  smoke_test.sh
desktop/: main.js  package.json  process_receipt.py  renderer.js
desktop-app/: ASSETS_README.md  README.md  ReceiptExtractor.desktop  app.js  index.html  main.js  preload.js  process_receipt.py  styles.css
docs/: API.md  ASSESSMENT_COMPARISON.md  CODE_IMPROVEMENT_CHECKLIST.md  CODE_QUALITY_ASSESSMENT.md  CODE_QUALITY_IMPROVEMENTS_100.md  CODE_QUALITY_SUMMARY.md  DEPENDENCY_ANALYSIS.md  DEPLOYMENT.md  DOCKER_OPTIMIZATION.md  FEATURE_FLAGS.md  FILE_RELATIONSHIPS.json  FILE_RELATIONSHIPS_AI.md  HEALTHCHECK.md  ISSUES_ANALYSIS.md  MARKETING_AUTOMATION.md  MARKETING_IMPLEMENTATION_SUMMARY.md  MARKETING_INTEGRATION.md  MISSING_TELEMETRY_SECURITY_FEATURES.md  MONETIZATION_GUIDE.md  MONITORING_RECOMMENDATIONS.md  OBJECTIVE_CODE_ASSESSMENT.md  OPTIMIZATION_REPORT.md  PATH_TO_100_ASSESSMENT.md  PHASE1_COMPLETION.md  PROJECT_WEAKNESSES_AND_PR_BRIEFS.md  PROJECT_WEAKNESSES_AND_PR_BRIEFS_UPDATED.md  RAILWAY_DEPLOYMENT.md  RAILWAY_FIX.md  RAILWAY_SETUP.md  README.md  REPOSITORY_SCREENER.md  TELEMETRY_AND_SECURITY.md  TELEMETRY_FINAL_SUMMARY.md  TELEMETRY_IMPLEMENTATION_GUIDE.md  TELEMETRY_PROGRESS_SUMMARY.md  TESTING.md  TYPE_CHECKING.md  USER_GUIDE.md  test_failure_remediation_steps.md
docs/archive/: README.md  (+4 more)
examples/: spatial_ocr_usage.py
migrations/: __init__.py  alembic.ini  env.py
scripts/: demo_cef_phase1.py  demo_cef_phase2.py  demo_cef_phase3.py  docker-entrypoint.sh  health_check.sh  log_manager.py  process_images_cefr.py  run_automated_cef_pipeline.py  run_cef_refactoring.py  run_cefr_full.py  run_cefr_round2.py  run_cefr_rounds_3_4_5.py  run_full_cef_refactoring.py  run_ocr_cef_refactoring.py
shared/: __init__.py  setup.py
test_data/: .gitkeep  README.md
tests/: README.md  __init__.py  conftest.py  test_model_manager.py  test_system_health.py
tools/: LAUNCH_ENHANCED_README.md  cleanup_cefr_boilerplate.py  launch.sh  launch_enhanced.sh  validate_production_config.py  verify_mvp_mode.py
web/: README.md  __init__.py  cache-bust.py
web-app/: FINETUNING_GUIDE.md  README.md
(+469 files in other folders)
