[project]
name = "receipt-extractor"
version = "3.0.0"
description = "AI-powered receipt extraction application"

[tool.pytest.ini_options]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
testpaths = ["tools/tests"]
addopts = "-v --tb=short --strict-markers --cov=shared --cov=web/backend --cov-report=html --cov-report=term-missing --no-header -ra -p no:cacheprovider"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "model: Model tests",
    "slow: Slow tests",
    "web: Web app tests",
    "cosmetic: Cosmetic enhancement tests"
]
norecursedirs = [".git", ".tox", "dist", "build", "*.egg", "venv", "node_modules"]
# Aggressive warning suppression - eliminate ALL noise from test output
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::FutureWarning",
    "ignore::UserWarning:.*swigvarlink.*",
    "ignore::pytest.PytestCollectionWarning",
    "ignore::ResourceWarning",
    "ignore::ImportWarning"
]
# Disable pytest's temp directory retention to prevent Windows cleanup issues
tmp_path_retention_count = 0
tmp_path_retention_policy = "none"

[tool.coverage.run]
source = ["shared", "web/backend"]
omit = ["*/tests/*", "*/test_*.py", "*/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_empty = true
